force-app/main/default/objects/LookZone__c/LookZone__c.object-meta.xml
<CustomObject>
    <description>Link a look to a zone in order to display it in the look library</description>
    <label>LookZone</label>
    <nameField>
        <displayFormat>LookZone{00000000}</displayFormat>
        <label>LookZone</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LookZone</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>