force-app/main/default/objects/LookZone__c/fields/SentToOneData__c.field-meta.xml
<CustomField>
    <fullName>SentToOneData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SentToOneData</label>
    <type>Checkbox</type>
</CustomField>