force-app/main/default/objects/LookZone__c/fields/Zone_Name__c.field-meta.xml
<CustomField>
    <fullName>Zone_Name__c</fullName>
    <description>reporting purpose</description>
    <formula>Zone__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone Name</label>
    <type>Text</type>
</CustomField>